src/objects/MessageTracker__c.object
<CustomObject>
    <fields>
        <fullName>MessageId__c</fullName>
        <label>MessageId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationTimeDelay__c</fullName>
        <defaultValue>NOW() -0.041</defaultValue>
        <label>NotificationTimeDelay</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendNotification</label>
        <type>Checkbox</type>
    </fields>
    <label>MessageTracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MessageTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>